# cold-war-boardgame

./: .dockerignore  Makefile  README.md  cold-war-boardgame.code-workspace  docker-compose.yml  requirements-dev.txt
backend/app/: .slugignore  pyproject.toml
backend/app/_tests/: conftest.py
backend/app/_tests/core/: test_processor_game.py
backend/app/_tests/crud/: test_crud_cards.py
backend/app/_tests/db/: test_db.py
backend/app/app/: config.py  constructs.py  main.py
backend/app/app/core/: engine_game.py  game_data.py  game_definition.py  game_logic.py  logic.py  processor_game.py  security.py  security_user.py
backend/app/app/crud/: crud_base.py  crud_card.py  crud_game.py  crud_game_current.py  crud_game_static.py  crud_user.py
backend/app/app/db/: collection.py  init_db.py  session.py
backend/app/app/models/: model_cards.py  model_game.py  model_game_current.py  model_game_static.py  model_user.py  user.py
backend/app/app/schemas/: cards.py  errors.py  schema_cards.py  schema_errors.py  schema_game.py  schema_user.py  schemas.py  scheme_game_current.py  scheme_game_current_api.py  scheme_game_static.py  user.py
backend/app/tests/: conftest.py  test_core.py  test_crud.py  test_db.py  test_main.py
backend/app/tests/core/: test_core.py  test_game_logic.py  test_logic.py  test_processor_game.py  test_security.py
backend/app/tests/crud/: test_crud_cards.py  test_crud_game.py  test_crud_game_current.py  test_crud_game_static.py  test_crud_user.py
backend/app/tests/db/: test_db.py
backend/app/tests/features/: default.feature
backend/app/tests/models/: test_model_game_current.py
backend/app/tests/scheme/: test_scheme_game_statuc.py
docs/: api.json  (+4 more)
(+28 files in other folders)
