[tool.poetry]
name = "cold-war-back"
version = "0.0.1"
description = ""
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
click = "^8.0.3"
python-dotenv = "^0.19.2"
poethepoet = "^0.13.1"
pymongo= "^4.1.1"
fastapi = "^0.79.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
pytest = ">=4.6"
ipython = "^8.0.0"
mypy = "^0.931"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
Faker = "^13.2.0"

[tool.poe.tasks]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "app/app/tests",
]
