[tool.poetry]
name = "cold-war-back"
version = "0.0.2"
description = "ColdWar API backend"
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
click = "^8.0.3"
python-dotenv = "^0.19.2"
poethepoet = "^0.13.1"
pymongo = {extras = ["srv"], version = "^4.2.0"}
fastapi = "^0.79.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
mongoengine = "^0.24.2"
bgameb = ">=0.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
toml = "^0.10.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = ">=4.6"
ipython = "^8.0.0"
mypy = "^0.931"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
Faker = "^13.2.0"
mongomock = "^4.1.2"

[tool.poe.tasks]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
